playground/notas_tests/invalid/pos-06.hulk
function a(x) => b(x);
function b(x) => c(x);
function c(x) => x + z;
a(1);
